# advent_of_code_2021

./: pyproject.toml
day1/: input.csv  run.py
day10/: run.py
day11/: run.py
day2/: input.csv  run.py
day3/: input.csv  run.py
day4/: run.py
day5/: run.py
day6/: run.py
day7/: run.py
day8/: run.py
day9/: run.py
