[tool.poetry]
name = "adventofcode2021"
version = "0.1.0"
description = ""
authors = ["Nicholas Long <nicholas.long@nrel.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
